Replace VRC_SDK_VRCSDK3 with asmdef version defines: - The VRC_SDK_VRCSDK3 scripting define has issues:   - It might no longer necessarily applied in some projects (i.e. Quest builds), which then fails avatar builds.   - It might still exist as a residual in non-VRChat SDK projects, which then fails compilation. - Replace this with version defines in the assembly definition files.   - We detect the VRChat Avatars SDK (not worlds).

--- a/Packages/dev.hai-vr.resilience.prefabulous.vrm/Scripts/VRM/Components/Prefabulous.VRM.Runtime.asmdef
+++ b/Packages/dev.hai-vr.resilience.prefabulous.vrm/Scripts/VRM/Components/Prefabulous.VRM.Runtime.asmdef
@@ -10,6 +10,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.vrchat.avatars",
+            "expression": "",
+            "define": "PREFABULOUS_FOR_VRM_VRCHAT_IS_INSTALLED"
+        }
+    ],
     "noEngineReferences": false
 }
